# autodevice

./: pyproject.toml
src/autodevice/: __init__.py  core.py
