[project]
name = "autodevice"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anantajit Subrahmanya", email = "anantajit@ucsb.edu" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "nvidia-ml-py>=13.580.65",
    "torch>=2.5.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
